--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Banking System</title>
+    <link rel="stylesheet" href="C:\Users\91990\Desktop\Spark Foundation/style.css">
+    <link rel="stylesheet" href="C:\Users\91990\Desktop\Spark Foundation/customers.css">
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="C:\Users\91990\Desktop\Spark Foundation/style.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
