--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic Banking System</title>
-    <link rel="stylesheet" href="C:\Users\91990\Desktop\Spark Foundation/style.css">
-    <link rel="stylesheet" href="C:\Users\91990\Desktop\Spark Foundation/customers.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="customers.css">
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="C:\Users\91990\Desktop\Spark Foundation/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="C:\Users\91990\Desktop\Spark Foundation/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
