--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- navbar starts here  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="C:\Users\91990\Desktop\Spark Foundation/index.html">Indian Bank</a>
+        <a class="navbar-brand" href="index.html">Indian Bank</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -36,10 +36,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="C:\Users\91990\Desktop\Spark Foundation/index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\91990\Desktop\Spark Foundation/customers.html">Customers</a>
+              <a class="nav-link" href="customers.html">Customers</a>
             </li>
           </ul>
         </div>
@@ -55,11 +55,11 @@
           <p>Welcome</p>
           <br>
           <br>
-          <a class="get-started" href="C:\Users\91990\Desktop\Spark Foundation/customers.html">Get Started</a>
+          <a class="get-started" href="customers.html">Get Started</a>
         </div>
         <div class="col-md-6 col-sm-12 text-center" data-aos="fade-left">
           <div class="hero-img-div">
-            <img class="hero-img" src="C:\Users\91990\Desktop\Spark Foundation/hero-img.jpg" alt="img-showing-money-transfer">
+            <img class="hero-img" src="hero-img.jpg" alt="img-showing-money-transfer">
           </div>
         </div>
       </div>
@@ -97,7 +97,7 @@
       }
     </script>
 
-    <script src="C:\Users\91990\Desktop\Spark Foundation/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"></script>
     <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"></script>
