--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="col-md-6 col-sm-12 text-center" data-aos="fade-left">
           <div class="hero-img-div">
-            <img class="hero-img" src="hero-img.jpg" alt="img-showing-money-transfer">
+            <img class="hero-img" src="img/hero-img.jpg" alt="img-showing-money-transfer">
           </div>
         </div>
       </div>
